<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/CTP_grey"
    tools:context=".AddVehicleActivity">

    <ImageView
        android:id="@+id/imgView"
        android:layout_width="882dp"
        android:layout_height="102dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/ctp" />

    <!--    <EditText-->
    <!--        android:id="@+id/etvLine"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="71dp"-->
    <!--        android:layout_marginStart="20dp"-->
    <!--        android:layout_marginTop="619dp"-->
    <!--        android:layout_marginEnd="20dp"-->
    <!--        android:layout_marginBottom="590dp"-->
    <!--        android:background="@drawable/rounded_corner_view"-->
    <!--        android:hint="@string/line"-->
    <!--        android:padding="10dp"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textSize="35sp"-->
    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHorizontal_bias="0.0"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintStart_toEndOf="@id/imgView"-->
    <!--        app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/etvPicture"
        android:layout_width="202dp"
        android:layout_height="201dp"
        android:layout_marginStart="95dp"
        android:layout_marginEnd="96dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/photo"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/CTP_purple"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgView" />

    <Button
        android:id="@+id/bttnSave"
        android:layout_width="61dp"
        android:layout_height="61dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/CTP_purple"
        android:padding="18dp"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="20dp"
        app:drawableLeftCompat="@drawable/ic_baseline_check_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etvStopStation"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/stopStation"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/etvStartStation"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etvVehicleType"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/type"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/etvStopStation"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etvLine"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/line"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/etvPicture"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/etvStartStation"
        android:layout_width="match_parent"
        android:layout_height="71dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/rounded_corner_view"
        android:hint="@string/startStation"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintTop_toBottomOf="@+id/etvLine"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>